Changed: index.html, Mein Geb. Datum eingefügt - mschoenig
Geburtstagsdatum eingefügt

--- a/1. Meilenstein/HTML/index.html
+++ b/1. Meilenstein/HTML/index.html
@@ -20,7 +20,7 @@
 
 		<ul><b>Schönig Martin</b>
 			<li>Matrikelnummer: 1328644  </li>
-			<li>Geburtstag:  </li>
+			<li>Geburtstag: 19.07.1989  </li>
 		</ul>
 		
 	</body>
