Changed: index.html, Vali grün Task 3 - mschoenig
Doctype deklariert. Lang eingetragen. Zeichencodierung eingetragen. Und
Umlaute -ö- sichtbar gemacht. Frage an Fr. Kraus, ob man dies anders
lösen kann.

--- a/1. Meilenstein/HTML/index.html
+++ b/1. Meilenstein/HTML/index.html
@@ -1,5 +1,7 @@
-<html>
-	<head>
+<!DOCTYPE html>
+<html lang="de">
+  <head>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
 		<title>
 			1410655/1328644
 		</title>
@@ -7,18 +9,22 @@
 
 	<body>
 		<h1>Ahtin</h1>
-		Das ist ein sehr schöner Text. Dieser Text ist unfassbar schön.<br>
-		Man glaubt es nicht, aber es ist wirklich ein sehr schöner Text. Wieso es so schön ist?<br>
+		Das ist ein sehr sch&ouml;ner Text. Dieser Text ist unfassbar sch&ouml;n.<br>
+		Man glaubt es nicht, aber es ist wirklich ein sehr sch&ouml;ner Text. Wieso es so sch&ouml;n ist?<br>
 		Na sieh doch hin! Wenn du es noch nicht verstehst, eines tages wirst du es...<br>
 		
+		<p></p>
 		
 		
-		<ul><b>Salame Ahmed</b>
+		<b>Salame Ahmed</b>
+		
+		<ul>
 			<li>Matrikelnummer: 1410655 </li>
 			<li>Geburtstag: 12.11.1992 </li>
 		</ul>
 
-		<ul><b>Schönig Martin</b>
+		<b>   Sch&ouml;nig Martin</b>
+		<ul>
 			<li>Matrikelnummer: 1328644  </li>
 			<li>Geburtstag: 19.07.1989  </li>
 		</ul>
