Changed: alle Dateien, Verbesserungen - alle
Fast komplett bearbeitet und fast fertig. Alle drei zusammen heute in
der HS.

--- a/2.Meilenstein/html/home.html
+++ b/2.Meilenstein/html/home.html
@@ -3,23 +3,29 @@
 		<head>
 			<title>2.Meilenstein</title>
 			<link rel="stylesheet" type="text/css" href="..\css\layout.css">
+			<link rel="stylesheet" type="text/css" href="..\css\home.css">
 		</head>
 		<body>
 			<div id=grundlayout>
 				<div>
-					<p id=ueberschrift>Internet Book Database</p>
+					<p id=ueberschrift>
+						<span class="schriftFarbe">I</span>nternet 
+						<span class="schriftFarbe">B</span>ook 
+						<span class="schriftFarbe">D</span>ata
+						<span class="schriftFarbe">b</span>ase</p>
 				</div>
-				<div>
-					WE
-					<img id=picture class=rahmen src="..\picture\titelbild.png">
-					BOOKS
+				<div  id="bildschrift" class="schriftFarbe" >
+						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+						WE  
+						<img align="middle" id=picture class=rahmen src="..\picture\titelbild.png">
+						BOOKS
+					
 				</div>
+				<br>
 				<div id=menu class=rahmen>
-					<form action="demo_form.asp">
-						 <a href="">Buch anlegen</a>
-						 <a href="">Login</a>
-						 <a href="">Registrieren</a>
-					</form>
+						<div> <a href="book_entry.html">Buch anlegen</a></div>
+						<div> <a href="">Login</a></div>
+						<div> <a href="">Registrieren</a></div>
 				</div>
 			</div>
 		</body>
