Changed:home.html,umbenannt in index.html - salame
Zudem habe ich noch bei Login zu book.hmtl verlinkt.

--- a/3.Meilenstein/html/index.html
+++ b/3.Meilenstein/html/index.html
@@ -24,7 +24,7 @@
 				<br>
 				<div id=menu class=rahmen>
 						<div> <a href="book_entry.html">Buch anlegen</a></div>
-						<div> <a href="">Login</a></div>
+						<div> <a href="book.html">Login</a></div>
 						<div> <a href="">Registrieren</a></div>
 				</div>
 			</div>
