CHANGE: book_entry.html, Fehler behoben-salame

--- a/6.Meilenstein/html/book_entry.html
+++ b/6.Meilenstein/html/book_entry.html
@@ -198,7 +198,7 @@ function validateForm() {
 
 					<table class="checkbox">
 					
-					<tr><td><div><input checked="checked" type="checkbox" name="Horror" value="Horror">Horror</div> </td>
+					<tr><td><div><input checked="checked" type="checkbox" name="genre" value="Horror">Horror</div> </td>
 						<td><div><input type="checkbox" name="genre" value="Doku">Doku</div></td>
 
 					<tr><td><div><input type="checkbox" name="genre" value="Psycho">Psycho</div> </td>
