CHANGED: book_entry.html, getBooks.php; required bei Favorit entfernt, getBooks überabeitet - Waldheuer

--- a/6.Meilenstein/html/book_entry.html
+++ b/6.Meilenstein/html/book_entry.html
@@ -228,7 +228,7 @@ function validateForm() {
 			<rightbox>
 				<div><input type="text" size="14" name="vorname" required></div>
 				<div><input type="text" size="14" name="name" required></div>
-				<div><input type="checkbox" size="14" name="filmfavorit" required ></div>
+				<div><input type="checkbox" size="14" name="filmfavorit"></div>
 			</rightbox>
 
 		</div>
